--- a/frontend/restaurant-management-app/angular.json
+++ b/frontend/restaurant-management-app/angular.json
@@ -35,12 +35,13 @@
                 "glob": "**/*",
                 "input": "public"
               },
-              "src/assets"
+              "src/assets",
+              "src/favicon.ico"
             ],
             "styles": [
               "@angular/material/prebuilt-themes/azure-blue.css",
-              "src/styles.css",
-              "src/assets/css/bootstrap.min.css"
+              "src/assets/css/bootstrap.min.css",
+              "src/styles.css"
             ],
             "scripts": [
               "src/assets/js/jquery.min.js",
