--- a/frontend/restaurant-management-app/package.json
+++ b/frontend/restaurant-management-app/package.json
@@ -25,8 +25,10 @@
     "@angular/router": "^18.0.0",
     "@angular/ssr": "^18.0.2",
     "express": "^4.18.2",
+    "font-awesome": "^4.7.0",
     "ngx-toastr": "^19.0.0",
     "rxjs": "~7.8.0",
+    "swiper": "^11.1.4",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
   },
