--- a/frontend/restaurant-management-app/package.json
+++ b/frontend/restaurant-management-app/package.json
@@ -27,6 +27,7 @@
     "@types/bootstrap": "^5.2.10",
     "bootstrap": "^5.3.3",
     "font-awesome": "^4.7.0",
+    "localstorage-memory": "^1.0.3",
     "ngx-toastr": "^19.0.0",
     "swiper": "^11.1.4",
     "tslib": "^2.3.0",
